--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "devDependencies": {
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
-        "vite": "^5.0.0"
+        "vite": "^6.3.5"
+    },
+    "dependencies": {
+        "apexcharts": "^4.7.0"
     }
 }
